--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,6 +9,16 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+.white-block {
+  background: #fff;
+  border-radius: 25px;
+  padding: 1.5rem 3rem;
+}
+
+.wrapper {
+  min-height: calc(100vh - 54px);
+}
+
 a {
   color: inherit;
   text-decoration: none;
