--- a/styles/components/ProductDetails.module.scss
+++ b/styles/components/ProductDetails.module.scss
@@ -25,11 +25,19 @@
   }
 
   &__slider {
-    width: 140px !important;
+    width: 200px !important;
+  }
+
+  &__current {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
 
   &__image {
-    margin: .5rem;
+    margin: .5rem 0;
+    cursor: pointer;
     width: 100px;
     height: 100px;
     display: flex;
@@ -37,6 +45,10 @@
     align-items: center;
     background: #F4F4F4;
     border-radius: 15px;
+
+    &.active {
+      border: 2px solid $purple;
+    }
   }
 
   &__subtitle {
