--- a/styles/components/ProductHeader.module.scss
+++ b/styles/components/ProductHeader.module.scss
@@ -1,29 +1,10 @@
 @import "../vars";
 
 .product-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 1rem 0;
-
-  &__left {
-    cursor: pointer;
-
-    svg {
-      transform: scale(2);
-    }
-  }
-
-  &__right {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-  }
-
   &__title {
     text-transform: uppercase;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 500;
   }
 
   &__price {
