--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,9 +19,42 @@ body {
   min-height: calc(100vh - 54px);
 }
 
+.button {
+  cursor: pointer;
+  border: none;
+  background: $purple;
+  color: white;
+  border-radius: 10px;
+  font-size: 16px;
+  padding: 8px 30px;
+
+  &:hover {
+    opacity: .9;
+  }
+
+  &.button_lg {
+    padding: 1rem 2.5rem;
+    font-size: 18px;
+  }
+}
+
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.mx-auto {
+  margin-left: auto !important;
+  margin-right: auto !important;
+  display: block;
+}
+
+.mb {
+  margin-bottom: 1.5rem;
+}
+
+.mt {
+  margin-top: 1.5rem;
 }
 
 * {
