--- a/styles/components/Categories.module.scss
+++ b/styles/components/Categories.module.scss
@@ -20,6 +20,7 @@
   background: #fff;
   cursor: pointer;
   transition: .1s ease-in;
+  width: fit-content;
   
   &:hover {
     background: #f7f7f7;
@@ -39,13 +40,9 @@
 }
 
 @media screen and (max-width: 1050px){
-  .category {
-    width: calc(13% - 0.5rem) !important;
-  }
+
 }
 
 @media screen and (max-width: 980px){
-  .category {
-    width: calc(17% - 0.5rem) !important;
-  }
+
 }
