--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
 @import "vars";
+@import "modal.scss";
 @import "~noty/src/noty.scss";
 @import "~noty/src/themes/mint.scss";
 
@@ -108,3 +109,11 @@ a {
 }
 
 
+.input {
+  border: none;
+  border-radius: 7px;
+  background: #fff;
+  outline: none;
+  padding: 5px 15px;
+  cursor: pointer;
+}
