--- a/styles/components/SubHeader.module.scss
+++ b/styles/components/SubHeader.module.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 1rem 0;
+  gap: 1rem;
 
   &__left {
     cursor: pointer;
@@ -16,6 +17,7 @@
     text-transform: uppercase;
     font-size: 20px;
     font-weight: 500;
+    text-align: end;
   }
 
   &__right {
