--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,6 +22,10 @@ body {
   min-height: calc(100vh - 54px);
 }
 
+*[data-arrow] {
+  display: none;
+}
+
 .button {
   cursor: pointer;
   border: none;
@@ -29,6 +33,8 @@ body {
   color: white;
   border-radius: 10px;
   font-size: 16px;
+  text-align: center;
+  justify-content: center;
   padding: 8px 30px;
 
   &:hover {
@@ -50,6 +56,10 @@ a {
   margin-left: auto !important;
   margin-right: auto !important;
   display: block;
+}
+
+.rec-item-wrapper {
+  width: fit-content !important;
 }
 
 .mb {
