--- a/styles/components/Products.module.scss
+++ b/styles/components/Products.module.scss
@@ -14,6 +14,12 @@
   position: relative;
   width: calc(25% - .8rem);
 
+  &:hover {
+    .product__title {
+      color: $purple;
+    }
+  }
+
   img {
     max-width: 100%;
   }
@@ -42,10 +48,6 @@
     margin-bottom: .3rem;
     font-size: 18px;
     cursor: pointer;
-
-    &:hover {
-      color: $purple;
-    }
   }
 
   &__subtitle {
@@ -71,6 +73,7 @@
   &__image {
     cursor: pointer;
     text-align: center;
+    height: 180px;
   }
 }
 
