--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,6 +18,11 @@ body {
   padding: 1.5rem 3rem;
 }
 
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .wrapper {
   min-height: calc(100vh - 54px);
 }
