--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -11,6 +11,7 @@
   padding: 40px;
   border-radius: 10px;
   height: fit-content;
+  z-index: 100;
 
   &__title {
     font-weight: bold;
@@ -50,6 +51,7 @@
   &__overlay {
     position: fixed;
     inset: 0;
+    z-index: 100;
     background-color: #000000ab;
   }
 
