--- a/styles/components/Filters.module.scss
+++ b/styles/components/Filters.module.scss
@@ -26,6 +26,13 @@
     padding: 20px;
   }
 
+  &__overlay {
+    z-index: 100;
+    position: fixed;
+    inset: 0px;
+    background-color: rgba(255, 255, 255, 0.75);
+  }
+
   &__items {
     display: flex;
     gap: 1rem;
