--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
 @import "vars";
+@import "responsive";
 @import "modal.scss";
 @import "~noty/src/noty.scss";
 @import "~noty/src/themes/mint.scss";
@@ -18,6 +19,10 @@ body {
   padding: 1.5rem 3rem;
 }
 
+.custom-page-block {
+  margin: 1rem 0;
+}
+
 img {
   max-width: 100%;
   max-height: 100%;
@@ -29,6 +34,66 @@ img {
 
 *[data-arrow] {
   display: none;
+}
+
+.socials {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+.awssld__content {
+  background: none;
+}
+
+.slider {
+  height: 300px;
+  margin: 20px 0;
+}
+
+.banner {
+  width: 100%;
+  padding: 0 10px;
+  height: 300px;
+
+  &__inner {
+    background-size: cover;
+    background-position: center;
+    border-radius: 15px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 40px 100px;
+    justify-content: center;
+    gap: .5rem;
+    align-items: flex-start;
+  }
+
+  &__title {
+    font-weight: bold;
+    font-size: 24px;
+  }
+
+  &__text {
+    font-size: 18px;
+  }
+
+  &__button {
+    margin-top: .5rem;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 18px;
+
+    &:hover {
+      opacity: .8;
+    }
+  }
+}
+
+
+.social {
+  width: 28px;
+  display: flex;
 }
 
 .button {
