--- a/styles/responsive.scss
+++ b/styles/responsive.scss
@@ -1,6 +1,7 @@
 @media screen and(max-width: 400px) {
   .banner__inner {
     padding: 40px 30px !important;
+    justify-content: flex-start;
   }
 
   .banner__title {
