--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -31,6 +31,13 @@ img {
   max-height: 100%;
 }
 
+.alert {
+  background: #3ed4e345;
+  padding: 20px 30px;
+  border-radius: 10px;
+  color: #0fadc7;
+}
+
 .wrapper {
   min-height: calc(100vh - 54px);
 }
